--- a/Assets/UI Toolkit/MainUI.uxml
+++ b/Assets/UI Toolkit/MainUI.uxml
@@ -1,6 +1,6 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/UI%20Toolkit/MainUI.uss?fileID=7433441132597879392&amp;guid=c5035a86c2db1e54aaf5e62c8ad91c60&amp;type=3#MainUI" />
-    <ui:VisualElement name="AnimalConfirmPage" class="DownState NomalState" style="transition-duration: 0.5s;">
+    <ui:VisualElement name="AnimalConfirmPage" class="DownState NomalState" style="transition-duration: 0.5s; width: 100%; height: 100%;">
         <ui:VisualElement name="Top" style="flex-grow: 1; flex-direction: row; height: 30%; width: 100%; align-items: stretch;">
             <ui:VisualElement name="Top1" style="flex-grow: 1; width: 30%; flex-direction: column; align-self: auto; align-content: auto; justify-content: flex-start; align-items: auto;" />
             <ui:VisualElement name="Top2" style="flex-grow: 1; width: 40%; flex-direction: row; align-content: auto; justify-content: space-between; align-items: auto;">
