--- a/Assets/UI Toolkit/MainUI.uxml
+++ b/Assets/UI Toolkit/MainUI.uxml
@@ -1,7 +1,7 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/UI%20Toolkit/MainUI.uss?fileID=7433441132597879392&amp;guid=c5035a86c2db1e54aaf5e62c8ad91c60&amp;type=3#MainUI" />
     <ui:VisualElement name="AnimalConfirmPage" class="DownState NomalState" style="transition-duration: 0.5s; width: 100%; height: 100%;">
-        <ui:VisualElement name="Top" style="flex-grow: 1; flex-direction: row; height: 30%; width: 100%; align-items: stretch;">
+        <ui:VisualElement name="Top" style="flex-grow: 1; flex-direction: row; height: 50%; width: 100%; align-items: stretch;">
             <ui:VisualElement name="Top1" style="flex-grow: 1; width: 30%; flex-direction: column; align-self: auto; align-content: auto; justify-content: flex-start; align-items: auto;" />
             <ui:VisualElement name="Top2" style="flex-grow: 1; width: 40%; flex-direction: row; align-content: auto; justify-content: space-between; align-items: auto;">
                 <ui:Label text="Player" name="PlayerLabel" />
@@ -9,16 +9,16 @@
             </ui:VisualElement>
             <ui:VisualElement name="Top3" style="flex-grow: 1; width: 30%; flex-direction: column; align-content: auto; justify-content: flex-start; align-self: auto; align-items: auto;" />
         </ui:VisualElement>
-        <ui:VisualElement name="Mid" style="flex-grow: 1; width: 100%; height: 40%; flex-direction: row; align-self: center; align-items: center; align-content: center; justify-content: space-around;">
-            <ui:Button name="Animal1" />
-            <ui:Button name="Animal2" />
-            <ui:Button name="Animal3" />
-            <ui:Button name="Animal4" />
-            <ui:Button name="Animal5" />
-            <ui:Button name="Animal6" />
-            <ui:Button name="Animal7" />
+        <ui:VisualElement name="Mid" style="flex-grow: 1; width: 100%; height: 30%; flex-direction: row; align-self: auto; align-items: center; align-content: auto; justify-content: space-evenly;">
+            <ui:Button name="Animal1" style="width: 100px; height: 100px;" />
+            <ui:Button name="Animal2" style="width: 100px; height: 100px;" />
+            <ui:Button name="Animal3" style="width: 100px; height: 100px;" />
+            <ui:Button name="Animal4" style="width: 100px; height: 100px;" />
+            <ui:Button name="Animal5" style="height: 100px; width: 100px;" />
+            <ui:Button name="Animal6" style="width: 100px; height: 100px;" />
+            <ui:Button name="Animal7" style="height: 100px; width: 100px;" />
         </ui:VisualElement>
-        <ui:VisualElement name="Bot" style="flex-grow: 1; height: 30%; width: 100%; justify-content: space-around; align-items: center; flex-direction: row; align-self: center; align-content: center;">
+        <ui:VisualElement name="Bot" style="flex-grow: 1; height: 20%; width: 100%; justify-content: space-around; align-items: center; flex-direction: row; align-self: center; align-content: center;">
             <ui:Button text="Confirm" name="Confirm" style="width: 40%;" />
             <ui:Button text="GameStart" name="GameStart" style="width: 40%;" />
         </ui:VisualElement>
