--- a/Assets/UI Toolkit/MainUI.uss
+++ b/Assets/UI Toolkit/MainUI.uss
@@ -1,18 +1,52 @@
 :root {
 }
 
-.DownState {
-    flex-grow: 1;
+.AnimalConfirmPageDownState {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    flex-shrink: 0;
     opacity: 0;
     translate: 0 100%;
     transition-duration: 0.5s;
 }
 
-.NomalState {
-    translate: 0 0%;
-    align-content: flex-start;
-    align-items: stretch;
-    transition-duration: 0.5s;
+.AnimalConfirmPageDefaultState {
     opacity: 1;
-    flex-grow: 1;
+    translate: 0 0%;
+}
+
+.WinLosePopUpSmallState {
+    flex-grow: 0;
+    background-color: rgba(255, 255, 255, 0);
+    background-size: 50% 50%;
+    flex-shrink: 0;
+    width: 60%;
+    height: 80%;
+    justify-content: center;
+    align-items: center;
+    transition-duration: 0.25s;
+    scale: 0 0;
+}
+
+.WinLosePopUpDefaultState {
+    scale: 1 1;
+}
+
+.WinLoseNoticePageInvisibleState {
+    transition-duration: 0.25s;
+    position: absolute;
+    flex-shrink: 0;
+    width: 100%;
+    height: 100%;
+    align-self: auto;
+    justify-content: center;
+    align-content: auto;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0);
+    opacity: 1;
+}
+
+.WinLoseNoticePageDefaultState {
+    background-color: rgba(0, 0, 0, 0.59);
 }
