--- a/Assets/!/UI Toolkit/MultiColumnListView.uxml
+++ b/Assets/!/UI Toolkit/MultiColumnListView.uxml
@@ -1,9 +1,9 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <ui:VisualElement style="flex-grow: 0; width: 100%; height: 100%; flex-shrink: 0; align-self: auto; align-items: center; justify-content: center;">
-        <ui:VisualElement style="flex-grow: 0; align-self: auto; align-items: center; justify-content: center; width: 80%; height: 80%; flex-shrink: 0;">
-            <ui:MultiColumnListView name="MultiColumnListView" style="flex-shrink: 0; width: 100%; height: 100%; font-size: 14px; flex-basis: auto; align-items: center; justify-content: flex-start; text-overflow: clip; align-self: auto; -unity-text-align: upper-left; flex-grow: 0; background-color: rgb(143, 173, 176);">
-                <ui:Columns />
-            </ui:MultiColumnListView>
+    <Style src="project://database/Assets/!/UI%20Toolkit/MainUI.uss?fileID=7433441132597879392&amp;guid=c5035a86c2db1e54aaf5e62c8ad91c60&amp;type=3#MainUI" />
+    <ui:VisualElement name="VisualElement" style="flex-grow: 0; width: 100%; height: 100%; flex-shrink: 0; align-self: auto; align-items: center; justify-content: center;">
+        <ui:VisualElement style="flex-grow: 0; align-self: auto; align-items: center; justify-content: center; width: 80%; height: 80%; flex-shrink: 0; -unity-text-align: middle-center; align-content: flex-start;">
+            <ui:MultiColumnListView style="width: 100%; height: 100%; background-color: rgb(247, 226, 226); flex-shrink: 1; align-items: stretch;" />
+            <ui:Button text="Close" name="closeButton" style="overflow: hidden; position: relative; top: auto; left: auto; width: 25%; height: auto;" />
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
